Solutions/Simple-Node-App/k8s-deployments/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: node-app
  labels:
    app: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: us.gcr.io/ops-playplace/simple-node-app
        ports:
        - containerPort: 80
      nodeSelector:
        test-pool: 'true'
