Solutions/Simple-Node-App/k8s-deployments/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: node-app
  labels:
    component: mysql
    kubernetes.io/hostname: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      component: mysql
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql
        component: mysql
        name: mysql
    spec:
      containers:
      - name: mysql
        image: mysql/mysql-server:latest
