Solutions/Simple-Node-App/k8s-deployments/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: node-app
spec:
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
