Solutions/Simple-Node-App/k8s-deployments/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mysql
  name: mysql
  namespace: node-app
spec:
  ports:
  - name: mysql
    port: 3306
    nodePort: 31307
  selector:
    name: node-app
  sessionAffinity: None
  type: NodePort
