Solutions/Simple-Node-App/k8s-deployments/ingress-host.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/tls-acme: "true"
  name: alex-bold-test.boldapps.net
  namespace: node-app
spec:
  tls:
    - hosts:
      - alex-bold-test.boldapps.net
      secretName: alex-bold-test.boldapps.net
  rules:
    - host: alex-bold-test.boldapps.net
      http:
        paths:
        - path: /
          backend:
            serviceName: app-service
            servicePort: 5000
